--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <div id="Products" class="tabcontent">
   <h3>Your targeted products</h3>
-  <p>We preselected products based on your restrictions.</p>
-	 Choose items to buy, then add the products to the cart:
+  <!-- <p>We preselected products based on your restrictions.</p> -->
+	 <!-- Choose items to buy, then add the products to the cart: -->
 	 <div id="displayProduct"></div>
 	 <!-- <button id="addCart" type="button" class="block" onclick="selectedItems()">
 		Add selected items to cart.
