--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 	 <!-- <button id="addCart" type="button" class="block" onclick="selectedItems()">
 		Add selected items to cart.
 	</button> -->
-  <button id="Category" type="button" class="block" onclick="addProductToCategory()">
+  <button id="Category" type="button" class="block" onclick="addProductToCategory('products','productCategory')">
     Shop products by category
   </button>
 
-  <div class="productCategory">
+  <div id="productCategory">
     <ul class="breadcrumb">
       <li><a href="vegetarian.html">Vegetarian</a></li>
       <li><a href="glutenFree.html">GlutenFree</a></li>
